--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1><i class="fa-solid fa-images" style="color: #77775394;"></i> Image Search Engine</h1>
+    <h3>This website contains High Defination Images and it's free to Download  </h3>
     <form id="search-form">
         <input type="text" id="search-box" placeholder="Search anything here...">
         <button>Search</button>
