--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    <h1><i class="fa-solid fa-images" style="color: #77775394;"></i> Image Search Engine</h1>
+    <h1 onclick="goHome()" style="cursor: pointer;">
+        <i class="fa-solid fa-image"></i> Image Search Engine
+    </h1>
+    
     <form id="search-form">
         <input type="text" id="search-box" placeholder="Search anything here...">
         <button>Search</button>
